--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,7 +11,7 @@
     <depends>com.intellij.java</depends>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="yuyao@yourcompany.com" url="https://www.yourcompany.com">YuyaoCompany</vendor>
+    <vendor email="yuyao@yourcompany.com" url="https://www.zcy.com">zcy</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
