--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,15 +17,9 @@
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-     this is plugin of cef-kump for zcy````````````````````````````````````````````````````````````````````````````````
+     this is plugin of cef-jump for zcy````````````````````````````````````````````````````````````````````````````````
   ]]></description>
 
-    <!-- Product and plugin compatibility requirements.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
-    <depends>com.intellij.modules.platform</depends>
-
-    <!-- Extension points defined by the plugin.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
         <codeInsight.lineMarkerProvider language="JAVA" implementationClass="cn.yuyao.cefjump.handler.OpenBeforeHandler"/>
         <codeInsight.lineMarkerProvider language="JAVA" implementationClass="cn.yuyao.cefjump.handler.OpenAfterHandler"/>
